test/libsolidity/syntaxTests/events/file_level_event_shadowing_error.sol
event E();
error E();
// ----
// DeclarationError 2333: (11-21): Identifier already declared.
